packages/design-system/src/components/SwiperCarousel/web/SwiperCarousel.module.scss
.container {
  position: relative;
}

/* SLIDE */
.slide {
  width: auto;
}

/* PAGINATION (overlay style) */
.pagination {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 18px !important;

  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

/* SWIPER BULLETS */
:global(.swiper-pagination-bullet) {
  width: var(--spacing-6);
  height: var(--spacing-6);
  min-width: var(--spacing-6);

  border-radius: var(--radius-full);
  background: var(--color-border-on-dark-subtle-02);
  opacity: 1;

  transition: all 0.3s ease;
  cursor: pointer;
  border: none;
  pointer-events: auto;
}

/* ACTIVE */
:global(.swiper-pagination-bullet-active) {
  width: var(--spacing-20);
  height: var(--spacing-6);
  border-radius: var(--radius-full);

  background: var(--color-neutral-950);
}

/* NAVIGATION */

.navigation {
  display: flex;
  justify-content: flex-end;
  gap: var(--spacing-4);
  margin-top: var(--spacing-8);
}

.navButton {
  border: 1px solid var(--color-border-on-dark-subtle-01);
}

